--- a/Homework8/party2/Homework8 -2/Base.lproj/Main.storyboard
+++ b/Homework8/party2/Homework8 -2/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,18 +12,18 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Homework8__2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appple" translatesAutoresizingMaskIntoConstraints="NO" id="fju-Ck-zhy">
-                                <rect key="frame" x="142" y="104" width="130" height="130"/>
+                                <rect key="frame" x="122.66666666666669" y="104" width="130" height="130"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="fju-Ck-zhy" secondAttribute="height" multiplier="1:1" id="Dqz-oQ-hfF"/>
                                     <constraint firstAttribute="height" constant="130" id="WzJ-69-Aa7"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m63-rO-Jhq">
-                                <rect key="frame" x="90" y="274" width="234" height="34"/>
+                                <rect key="frame" x="90" y="274" width="195" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="VOz-Fn-WY9"/>
                                 </constraints>
@@ -31,7 +31,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bM5-dn-g8T">
-                                <rect key="frame" x="90" y="333" width="234" height="34"/>
+                                <rect key="frame" x="90" y="333" width="195" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="4Ac-ke-8uK"/>
                                 </constraints>
@@ -39,7 +39,7 @@
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RP4-X2-woY">
-                                <rect key="frame" x="132" y="407" width="150" height="30"/>
+                                <rect key="frame" x="132" y="407" width="111" height="30"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="7V8-w8-BL6"/>
